--- a/Frontend/src/UI/OnAir/OnAir.scss
+++ b/Frontend/src/UI/OnAir/OnAir.scss
@@ -19,10 +19,12 @@
   border: 8px solid #e2b8ff;
   border-style: double;
   border-radius: 20px;
+  z-index: 4;
 }
 
 .neon {
   position: absolute;
+  z-index: 3;
   width: 150px;
   height: 60px;
   top: -40px;
