--- a/Frontend/src/UI/MailBox/MailBox.scss
+++ b/Frontend/src/UI/MailBox/MailBox.scss
@@ -21,11 +21,11 @@ $mailColor: #ffffff;
     border: 1px solid $boxColor;
     overflow: hidden;
     transition: transform 0.6s cubic-bezier(0.65, 0, 0.35, 1);
-
+    transition: transform 0.3s cubic-bezier(0.65, 0, 0.35, 1);
     &::after {
       content: "";
       position: absolute;
-      bottom: -70%;
+      bottom: -80%;
       left: 50%;
       width: 60%;
       height: 140%;
