--- a/Frontend/src/UI/OnAir/OnAir.scss
+++ b/Frontend/src/UI/OnAir/OnAir.scss
@@ -6,11 +6,13 @@
 .onAir {
   display: flex;
   justify-content: center;
+  margin-top: 1.5rem;
 }
 
 .container {
   width: 80%;
   min-height: 440px;
+  min-height: 400px;
   position: absolute;
   margin-top: 2rem;
   display: table-cell;
