--- a/Frontend/src/components/Schedule/MySchedule.scss
+++ b/Frontend/src/components/Schedule/MySchedule.scss
@@ -1,7 +1,28 @@
-.myScheduleSwiper {
-  min-width: 500px;
-  min-height: 620px;
-}
+// .myScheduleSwiper {
+//   min-width: 500px;
+//   min-height: 620px;
+// }
+
+// .schedules {
+//   display: flex;
+//   margin-top: 20px;
+// }
+
+// .schedule_img {
+//   margin-left: 200px;
+//   margin-right: 100px;
+//   width: 300px;
+//   height: 200px;
+// }
+
+// .schedule_img > img {
+//   border-radius: 50px;
+//   border-width: 5px;
+// }
+
+// #schedule_descs {
+//   color: #fff;
+// }
 
 .myScheduleSwiper > .swiper-slide {
   background-position: center;
