--- a/Frontend/src/components/MyPage/Broadcast/MakeBroadcast.scss
+++ b/Frontend/src/components/MyPage/Broadcast/MakeBroadcast.scss
@@ -1,3 +1,23 @@
+.uploader-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .img-wrapper {
+    // width: 100%;
+    margin: 50px 0 20px 0;
+    img {
+      width: 200px;
+      height: 200px;
+    }
+  }
+  .upload-button {
+    button {
+      margin: 0 5px;
+    }
+  }
+}
+
 .bannerImg {
   width: 100%;
   height: 500px;
