--- a/Frontend/src/components/MyPage/Broadcast/MakeBroadcast.scss
+++ b/Frontend/src/components/MyPage/Broadcast/MakeBroadcast.scss
@@ -34,7 +34,7 @@
   border: 2px solid #000;
 }
 
-input[placeholder] {
+#makeBroadcastInput[placeholder] {
   text-align: center;
   color: #fff;
 }
