--- a/Frontend/src/UI/Carousel/Carousel.scss
+++ b/Frontend/src/UI/Carousel/Carousel.scss
@@ -5,7 +5,7 @@
   z-index: 0 !important;
 }
 
-.swiper-slide {
+.carouselSlide {
   background-position: center;
   background-size: cover;
   width: 400px;
