--- a/Frontend/src/UI/NavBar/NavBar.css
+++ b/Frontend/src/UI/NavBar/NavBar.css
@@ -9,6 +9,7 @@ body {
 .navbar {
   background-color: var(--navBg);
   height: 80px;
+  width: 100%;
   display: flex;
   justify-content: start;
   align-items: center;
@@ -64,7 +65,7 @@ body {
 .blocking {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 300%;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 50;
   position: fixed;
