--- a/Frontend/src/components/MyPage/Broadcast/ModifyBroadcast.scss
+++ b/Frontend/src/components/MyPage/Broadcast/ModifyBroadcast.scss
@@ -105,7 +105,7 @@ input[placeholder] {
   font-size: 23px;
   font-weight: bold;
   border-radius: 5px;
-  border: 2px solid #e2b8ff;
+  border: none;
   background-color: #13161f;
 }
 
